# CoppeliaSimSLAM

./: .gitignore  README.md
coppeliasim/: CMakeLists.txt  README.md  package.xml
coppeliasim/docker/: docker_setup.sh  vrep_docker.Dockerfile
coppeliasim/launch/: robot_mapping.launch
coppeliasim/models/components/sensors/: HokuyoROS.ttm
coppeliasim/nav/: costmap_common_params.yaml  local_costmap_params.yaml
coppeliasim/vrep_save/: mapping_rviz.rviz  maze_map.yaml  nav.ttt
docker/: docker_setup.sh  vrep_docker.Dockerfile
vrep_save/: mapping_rviz.rviz  nav.ttt
